Return ranking as part of quiz result